--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style type="text/css" src="styles.css"></style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Meetup-togo</title>
   </head>
   <body>
