--- a/client/index.html
+++ b/client/index.html
@@ -11,21 +11,26 @@
     <h1>Meetup-<i>togo</i></h1>
 
     <div class="main-search-form" ng-controller="CategoryController">
-      
+      <!-- CATEGORY DROP DOWN MENU -->
       <label>
-        <!-- Category: -->
         <select ng-options="option.name for option in category.results | orderBy: 'id'" ng-model="selected">
           <!-- <option ng-repeat="option in category.results | orderBy: 'id'"  value="{{option.id}}">{{option.name}}</option> -->
           <option value="">---Select Category---</option>
         </select>
       </label>
 
+      <!-- ZIP CODE -->
       <label>
         <input placeholder="Enter Zip Code" type="text" name="zip-code" ng-model="zipcode" />
       </label>
 
+      <!--
+            SEARCH SUBMISSION
+            HANLDED BY APP'S CONTROLLER
+      -->
       <button ng-click="findGroup(zipcode, selected)">Meetup!</button>
 
+      <!-- GROUP SEARCH RESULTS TABLE -->
       <table class="main-search-table" ng-hide="groupTable">
         <thead>
           <th>Group Name</th>
@@ -46,6 +51,7 @@
     <!-- <script src="../node_modules/angular/angular.js"></script>
     <script src="../node_modules/angular-route/angular-route.js"></script> -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.js"></script>
+    <!-- ENTRY POINT TO OUR FRONT-END APPLICATION -->
     <script src="app.js"></script>
   </body>
 </html>
